[fix] nav z-index값, location box 반복부 수정

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -226,6 +226,7 @@ select:focus {
   background: var(--Purple);
   position: fixed;
   top: 0;
+  z-index: 101;
 }
 
 .nav-title {
